--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "sleiman/airtable-php": "^3.0",
         "mailerlite/mailerlite-php": "^1.0",
         "symfony/http-client": "^6.3",
-        "nyholm/psr7": "^1.8"
+        "nyholm/psr7": "^1.8",
+        "mailerlite/mailerlite-api-v2-php-sdk": "^0.3.2"
     },
     "config": {
         "allow-plugins": {
